--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "parcel serve src/index.html --open",
     "server": "node server",
-    "test": "jest"
+    "test": "jest",
+    "init": "json-server --watch server/db.json --port 3001"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.20.11",
     "jest": "^29.4.2",
     "msw": "^1.0.1",
-    "parcel": "^2.8.3",
+    "parcel": "^2.12.0",
     "process": "^0.11.10"
   },
   "msw": {
